新增material设计支持库 移除toast工具，使用snackbar替代 修改主体样式

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,6 +1,6 @@
 <resources>
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
+    <style name="AppTheme" parent="Theme.MaterialComponents.Light.NoActionBar">
         <item name="colorPrimary">@color/color_primary</item>
         <item name="colorPrimaryDark">@color/color_primary_dark</item>
         <item name="colorAccent">@color/color_accent</item>
@@ -12,7 +12,7 @@
     </style>
 
     <!--loadingDialog样式-->
-    <style name="LoadingDialogTheme" parent="Theme.AppCompat.Light.Dialog">
+    <style name="LoadingDialogTheme" parent="Theme.MaterialComponents.Light.Dialog">
         <item name="android:windowBackground">@android:color/transparent</item>
         <item name="android:windowFrame">@android:color/transparent</item>
         <item name="android:windowSoftInputMode">stateHidden</item>
